--- a/banquemisr.challenge05.Movies_App/View/Base.lproj/Main.storyboard
+++ b/banquemisr.challenge05.Movies_App/View/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Up Coming-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="banquemisr_challenge05_Movies_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="UpComingViewController" customModule="banquemisr_challenge05_Movies_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,31 +20,30 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="710"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="116" id="n7J-Gj-WmI">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="116"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="125" id="n7J-Gj-WmI" customClass="UpComingTableViewCell" customModule="banquemisr_challenge05_Movies_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n7J-Gj-WmI" id="mSX-cD-F5u">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="116"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" id="PVp-qK-q0U">
-                                                    <rect key="frame" x="0.0" y="1" width="393" height="114"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rR9-Dv-mGI">
+                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UXC-Lp-QyV">
-                                                            <rect key="frame" x="8" y="8" width="100" height="98"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vBz-8L-l66">
+                                                            <rect key="frame" x="8" y="12.666666666666664" width="100" height="100"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="100" id="XBG-7c-EN1"/>
-                                                                <constraint firstAttribute="width" constant="100" id="kAQ-i6-5YY"/>
+                                                                <constraint firstAttribute="height" constant="100" id="aGE-Dj-86m"/>
+                                                                <constraint firstAttribute="width" constant="100" id="gSa-Fu-EaI"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rg6-wV-i2j">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOe-K3-YpC">
                                                             <rect key="frame" x="118" y="19.999999999999996" width="265" height="33.666666666666657"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUB-QZ-2kW">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fuv-Kj-iBz">
                                                             <rect key="frame" x="118" y="61.666666666666657" width="265" height="23"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                             <nil key="textColor"/>
@@ -53,23 +52,38 @@
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="UXC-Lp-QyV" secondAttribute="bottom" constant="8" id="0y1-xI-et5"/>
-                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="VUB-QZ-2kW" secondAttribute="bottom" constant="8" id="3Zo-Lu-ovm"/>
-                                                        <constraint firstItem="UXC-Lp-QyV" firstAttribute="leading" secondItem="PVp-qK-q0U" secondAttribute="leading" constant="8" id="5uo-S1-Kav"/>
-                                                        <constraint firstItem="Rg6-wV-i2j" firstAttribute="top" secondItem="PVp-qK-q0U" secondAttribute="top" constant="20" id="7yj-wg-vkr"/>
-                                                        <constraint firstItem="UXC-Lp-QyV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="PVp-qK-q0U" secondAttribute="top" constant="8" id="EPQ-JK-muW"/>
-                                                        <constraint firstAttribute="trailing" secondItem="VUB-QZ-2kW" secondAttribute="trailing" constant="10" id="GmX-Fv-Mph"/>
-                                                        <constraint firstItem="UXC-Lp-QyV" firstAttribute="centerY" secondItem="PVp-qK-q0U" secondAttribute="centerY" id="JdE-yd-D0C"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Rg6-wV-i2j" secondAttribute="trailing" constant="10" id="NFI-Us-Z4z"/>
-                                                        <constraint firstItem="Rg6-wV-i2j" firstAttribute="leading" secondItem="UXC-Lp-QyV" secondAttribute="trailing" constant="10" id="VHw-fD-eiL"/>
-                                                        <constraint firstItem="VUB-QZ-2kW" firstAttribute="leading" secondItem="UXC-Lp-QyV" secondAttribute="trailing" constant="10" id="cYa-Wp-ZaB"/>
-                                                        <constraint firstItem="VUB-QZ-2kW" firstAttribute="top" secondItem="Rg6-wV-i2j" secondAttribute="bottom" constant="8" id="kR5-uV-vW2"/>
+                                                        <constraint firstItem="Fuv-Kj-iBz" firstAttribute="leading" secondItem="vBz-8L-l66" secondAttribute="trailing" constant="10" id="0kF-QH-5KV"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GOe-K3-YpC" secondAttribute="trailing" constant="10" id="3cG-F1-6Lq"/>
+                                                        <constraint firstItem="GOe-K3-YpC" firstAttribute="leading" secondItem="vBz-8L-l66" secondAttribute="trailing" constant="10" id="4PE-af-K3v"/>
+                                                        <constraint firstItem="vBz-8L-l66" firstAttribute="centerY" secondItem="rR9-Dv-mGI" secondAttribute="centerY" id="Buv-Na-efK"/>
+                                                        <constraint firstItem="vBz-8L-l66" firstAttribute="leading" secondItem="rR9-Dv-mGI" secondAttribute="leading" constant="8" id="DYE-uz-CGZ"/>
+                                                        <constraint firstItem="GOe-K3-YpC" firstAttribute="top" secondItem="rR9-Dv-mGI" secondAttribute="top" constant="20" id="Dph-CG-amr"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Fuv-Kj-iBz" secondAttribute="bottom" constant="8" id="YMM-bi-VBQ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Fuv-Kj-iBz" secondAttribute="trailing" constant="10" id="YOW-gx-lQU"/>
+                                                        <constraint firstItem="vBz-8L-l66" firstAttribute="top" relation="greaterThanOrEqual" secondItem="rR9-Dv-mGI" secondAttribute="top" constant="8" id="sHc-uC-Ai2"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vBz-8L-l66" secondAttribute="bottom" constant="8" id="uKh-ZD-7Va"/>
+                                                        <constraint firstItem="Fuv-Kj-iBz" firstAttribute="top" secondItem="GOe-K3-YpC" secondAttribute="bottom" constant="8" id="yoU-TI-7M2"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="rR9-Dv-mGI" firstAttribute="top" secondItem="mSX-cD-F5u" secondAttribute="top" id="In8-o3-piC"/>
+                                                <constraint firstAttribute="bottom" secondItem="rR9-Dv-mGI" secondAttribute="bottom" id="iGS-p9-SuJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="rR9-Dv-mGI" secondAttribute="trailing" id="jdc-bR-VFX"/>
+                                                <constraint firstItem="rR9-Dv-mGI" firstAttribute="leading" secondItem="mSX-cD-F5u" secondAttribute="leading" id="x8d-jZ-qp2"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblrealseyear" destination="Fuv-Kj-iBz" id="5E5-vc-jnW"/>
+                                            <outlet property="lbltitle" destination="GOe-K3-YpC" id="sLp-ho-BTv"/>
+                                            <outlet property="movieImg" destination="vBz-8L-l66" id="dC6-E9-IiE"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="2cP-tT-2hY"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="tJU-HH-wA6"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -83,6 +97,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Up Coming" image="arrow.counterclockwise.icloud.fill" catalog="system" id="zsM-Km-WZe"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="8oD-Xg-dfc" id="fy2-BF-KCZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -139,7 +156,6 @@
                                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qcL-zr-Smg" secondAttribute="bottom" constant="8" id="Gx7-Oj-F4S"/>
                                                         <constraint firstAttribute="trailing" secondItem="zx4-lQ-woT" secondAttribute="trailing" constant="10" id="NVP-Kx-Wpb"/>
                                                         <constraint firstItem="ebE-yW-HXx" firstAttribute="leading" secondItem="qcL-zr-Smg" secondAttribute="trailing" constant="10" id="Ujw-tG-aaA"/>
-                                                        <constraint firstItem="zx4-lQ-woT" firstAttribute="top" secondItem="ebE-yW-HXx" secondAttribute="bottom" constant="8" id="bQC-2w-OA1"/>
                                                         <constraint firstItem="zx4-lQ-woT" firstAttribute="top" secondItem="ebE-yW-HXx" secondAttribute="bottom" constant="8" id="czQ-ba-LlO"/>
                                                         <constraint firstItem="qcL-zr-Smg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Omq-rJ-zOG" secondAttribute="top" constant="8" id="did-Oz-omU"/>
                                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="zx4-lQ-woT" secondAttribute="bottom" constant="8" id="g8m-AC-eic"/>
